# SPIRV-Viewer

./: .gitmodules  CMakeLists.txt  README.md
include/: tool_SPIRVviewer.h  tool_SPIRVviewer.hpp  tool_framework.h
lib/Debug/: glfw3d.lib
lib/Release/: glfw3.lib  jsoncpp.lib
lib/include/cross/: spirv_cross_containers.hpp
lib/src/: nfd_win.cpp
source/: main.cpp  tool_SPIRVviewer.cpp  tool_framework.cpp
source/imgui/backends/: imgui_impl_opengl3.cpp
